--- a/frontend/app/src/sass/pages/analysis.sass
+++ b/frontend/app/src/sass/pages/analysis.sass
@@ -2,6 +2,10 @@
 .term
       text-align: center
       color: white
+
+.graphContainer
+      @extend .centerScreen
+
 .tweets
       width: 500px
       height: 500px
@@ -16,3 +20,7 @@
 .negative
       background-color: $negative-colour !important
       color: white !important
+
+.map
+      width: 1000px
+      height: 480px
