added platform choice

--- a/frontend/app/src/sass/pages/home.sass
+++ b/frontend/app/src/sass/pages/home.sass
@@ -21,7 +21,11 @@ $font-color: #cac8c8
             width: 90%
             height: 10%
             overflow-y: scroll
-            color: white
             text-align: center
             .words
                   cursor: pointer
+      .platformContainer
+            white-space: nowrap
+            .platform
+                  display: block
+                  margin: 0
