--- a/frontend/app/src/sass/pages/analysis.sass
+++ b/frontend/app/src/sass/pages/analysis.sass
@@ -1,25 +1,29 @@
 
 .term
       text-align: center
-      color: white
 
 .graphContainer
       @extend .centerScreen
+
+.dateText
+      text-align: center
+      margin-top: 50px
 
 .tweets
       width: 500px
       height: 500px
       overflow-y: scroll
       float: right
-      margin: 50px
+      margin-top: 50px
+      border: thin solid black
+      padding: 10px
+      color: white !important
 
 .positive
       background-color: $positive-colour !important
-      color: white !important
 
 .negative
       background-color: $negative-colour !important
-      color: white !important
 
 .map
       width: 1000px
