updated graph , added legend, updated page contents

--- a/frontend/app/src/features/D3/graph/graphStyle.css
+++ b/frontend/app/src/features/D3/graph/graphStyle.css
@@ -4,9 +4,15 @@
       stroke: black;
 }
 
-.line {
+.positive {
       fill: none;
       stroke: blue;
+      stroke-width: 2px;
+}
+
+.negative {
+      fill: none;
+      stroke: red;
       stroke-width: 2px;
 }
 
