--- a/frontend/app/src/sass/pages/analysis.sass
+++ b/frontend/app/src/sass/pages/analysis.sass
@@ -7,16 +7,16 @@
 
 .dateText
       text-align: center
-      margin-top: 50px
+      margin-top: $large-margin
 
 .tweets
-      width: 500px
-      height: 500px
+      width: $extra-large-width
+      height: $extra-large-width
       overflow-y: scroll
       float: right
-      margin-top: 50px
+      margin-top: $large-margin
       border: thin solid black
-      padding: 10px
+      padding: $medium-padding
       color: white !important
 
 .positive
@@ -26,5 +26,10 @@
       background-color: $negative-colour !important
 
 .map
-      width: 1000px
-      height: 480px
+      width: $extra-extra-large-width
+      height: $extra-large-width
+
+legend
+      width: inherit
+      border: none
+      margin: $reset-margin
